--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="action_settings">Settings</string>
 
     <string name="city_name">New York</string>
-    <string name="city_desc">Ensoleillé</string>
+    <string name="city_desc">Sunny</string>
     <string name="city_temp">24°C</string>
     <string name="title_activity_favorite">ScrollingActivity</string>
     <string name="large_text">
@@ -96,5 +96,9 @@
         "when a user tries to pick up one of cards.\n\n"
     </string>
     <string name="no_connexion">No connexion</string>
+    <string name="favorite_add">Add a city</string>
+    <string name="favorite_add_description">Add a city for quick access</string>
+    <string name="favorite_add_confirm">Save</string>
+    <string name="favorite_add_cancel">Cancel</string>
 
 </resources>
