--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,5 +100,8 @@
     <string name="favorite_add_description">Add a city for quick access</string>
     <string name="favorite_add_confirm">Save</string>
     <string name="favorite_add_cancel">Cancel</string>
+    <string name="favorite_remove_title">Remove %1$s from your favorites ?</string>
+    <string name="favorite_remove_confirm">Remove</string>
+    <string name="favorite_remove_cancel">Cancel</string>
 
 </resources>
