Use string resources for error toasts

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -105,6 +105,6 @@
     <string name="favorite_remove_cancel">Cancel</string>
     <string name="favorite_error_cant_find_city">Could not find city.</string>
     <string name="favorite_error_cant_add_favorite">Could not add city to favorites.</string>
-    <string name="favorite_error_couldnt_get_weather">Could not get weather data for this city.</string>
+    <string name="favorite_error_couldnt_get_weather">Could not fetch weather data.</string>
 
 </resources>
