--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -18,4 +18,5 @@
     <string name="favorite_error_cant_find_city">Ville introuvable.</string>
     <string name="favorite_error_cant_add_favorite">Impossible d\'ajouter la ville aux favoris.</string>
     <string name="favorite_error_couldnt_get_weather">Impossible de récupérer la météo.</string>
+    <string name="no_geolocation">Pas de données GPS.</string>
 </resources>
