--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -106,5 +106,6 @@
     <string name="favorite_error_cant_find_city">Could not find city.</string>
     <string name="favorite_error_cant_add_favorite">Could not add city to favorites.</string>
     <string name="favorite_error_couldnt_get_weather">Could not fetch weather data.</string>
+    <string name="no_geolocation">No Geolocation data.</string>
 
 </resources>
